Fixed the CSS file to prevent multiday events from overflowing in certain places

--- a/Resources/public/css/BootstrapCalendar.css
+++ b/Resources/public/css/BootstrapCalendar.css
@@ -228,10 +228,6 @@
 
 
 /*sizing*/
-.calendar-multiday-event {
-    max-height: 2%;
-}
-
 .calendar-multiday-event-week {
     min-height: 10px;
 }
@@ -300,7 +296,8 @@
 }
 
 .calendar-multiday-event {
-    max-height: 2%;
+    height: 1.7em;
+    overflow-y: hidden;
 }
 
 .calendar-date {
